Uploaded client images and corrected some css

--- a/index.html
+++ b/index.html
@@ -39,19 +39,14 @@
 <section class="client-showcase">
     <h2>Our Past Clients</h2>
     <div class="client-row">
-        <div class="client"><img src="curesee.png" alt="Client 1"></div>
-        <div class="client"><img src="curesee.png" alt="Client 2"></div>
-        <div class="client"><img src="boatlogo.avif" alt="Client 3"></div>
-        <div class="client"><img src="client4.jpg" alt="Client 4"></div>
-        <div class="client"><img src="client5.jpg" alt="Client 5"></div>
-    </div>
-    <div class="client-row reverse">
+        <div class="client"><img src="client1.jpg" alt="Client 1"></div>
+        <div class="client"><img src="client2.jpg" alt="Client 2"></div>
+        <div class="client"><img src="client3.jpg" alt="Client 3"></div>
+        <div class="client"><img src="client4.png" alt="Client 4"></div>
+        <div class="client"><img src="client5.png" alt="Client 5"></div>
         <div class="client"><img src="client6.jpg" alt="Client 6"></div>
-        <div class="client"><img src="client7.jpg" alt="Client 7"></div>
-        <div class="client"><img src="client8.jpg" alt="Client 8"></div>
-        <div class="client"><img src="client9.jpg" alt="Client 9"></div>
-        <div class="client"><img src="client10.jpg" alt="Client 10"></div>
     </div>
+   
 </section>
 
     <!-- Second Section with Video on the left -->
